# artifacts

./: .gitignore  README.md  pyproject.toml  setup.py
benchmarks/: cpu_attn_gqa.py  launch_server.sh  plot_e2e_bar.py  plot_e2e_bar_all.py  run_exp.py
benchmarks/cpu_profile/: flops.sh  mem_bdw.sh
benchmarks/flexgen/: mtbench_run_8x7b_moe.py
benchmarks/helm/: bench.py  helm1_moel_L4.jsonl  helm1_moel_T4.jsonl  helm2_moel_L4.jsonl  helm2_moel_T4.jsonl
benchmarks/mtbench/: bench.py  launch_server.sh  mtbench_moel_L4.jsonl  mtbench_moel_L4_backup.jsonl  mtbench_moel_S8.jsonl  mtbench_moel_S9.jsonl  mtbench_moel_p_L4.jsonl  mtbench_moel_p_S6.jsonl  mtbench_moel_p_S7.jsonl  mtbench_moel_p_t4.jsonl  mtbench_moel_t4.jsonl
fastmoe/backend/: execution_engine.py  memory.py  model_runner.py  optimizer.py  task.py  task_meta.py  utils.py
fastmoe/csrc/: flashattention.cpp
fastmoe/layers/: attention.py  context_flashattention_nopad.py  linear.py  logits_processor.py  stacked_fused_moe.py  token_attention.py
fastmoe/managers/: memory.py
fastmoe/models/: dbrx-offload.py  llama2.py  mixtral-offload.py  mixtral.py
fastmoe/serve/: conversation.py  detokenizer_manager.py  io_struct.py  launch_server.py  server.py  server_args.py  tokenizer_manager.py
fastmoe/utils/: hf_transformers_utils.py  utils.py  (+1 more)
notebooks/: MTBench-Mixtral-Analysis-Peter.ipynb  MTBench-Mixtral-Prediction.ipynb
performance_model/: cost_model.py  model_config.py  utils.py
test/: test.py
tests/: bench_stacked_fused_moe.py
traces/: MTBench-Mixtral Analysis-2.ipynb  mtbench_mixtral_utils.py
(+132 files in other folders)
