[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmoe"
version = "0.0.1"
description = "Fast MoE Serving." 
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp", "fastapi", "psutil", "rpyc", "torch", "uvloop", "uvicorn",
       "zmq", "vllm>=0.2.7", "interegular", "lark", "numba",
       "pydantic", "referencing", "diskcache", "cloudpickle", "pillow",
]

[tool.setuptools.packages.find]
exclude = ["traces*", "notebooks*", "docs*", "dist*", "tests*"]

[tool.wheel]
exclude = ["traces*", "notebooks*", "docs*", "dist*", "tests*"]
